webapp/ingress0910.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp0910-ingress
  annotations:
    networking.gke.io/managed-certificates: vf-cert
spec:
  rules:
  - host: virtualfriends.ai
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webapp0910-service
            port:
              number: 80
  - host: www.virtualfriends.ai
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webapp0910-service
            port:
              number: 80
